<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loginPageName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_login_page"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/loginTvLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginTvLayout"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toTopOf="@id/passwordTvLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginPageName"

                app:startIconContentDescription="@string/content_description_end_icon"
                app:startIconDrawable="@drawable/ic_baseline_favorite_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTvLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/loginBtn"
                app:layout_constraintEnd_toEndOf="@id/loginTvLayout"
                app:layout_constraintStart_toStartOf="@id/loginTvLayout"
                app:layout_constraintTop_toBottomOf="@id/loginTvLayout"
                app:startIconContentDescription="@string/content_description_end_icon"
                app:startIconDrawable="@drawable/ic_baseline_favorite_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/str_login_btn"
                app:layout_constraintBottom_toTopOf="@id/moveSignupTv"
                app:layout_constraintEnd_toEndOf="@id/passwordTvLayout"
                app:layout_constraintStart_toStartOf="@id/loginTvLayout"
                app:layout_constraintTop_toBottomOf="@id/passwordTvLayout" />

            <TextView
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/loginTvLayout"
                app:layout_constraintEnd_toEndOf="@id/loginTvLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginBtn"
                android:id="@+id/moveSignupTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_move_signup_page"
                android:textColor="#2196F3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>